# FPP

./: README.md  main.py  pyproject.toml  replit.nix
backend/: README.md
backend/src/: demo_data_seeder.py  main.py
backend/src/database/: app.db
backend/src/models/: subscriber.py
backend/src/routes/: advanced_features.py  personalization.py  salesforce.py
backend/src/services/: advanced_personalization.py  personalization_service.py  salesforce_service.py
backend/src/static/: index.html
docs/: DEPLOYMENT.md  PRICING_STRATEGY.md  PUBLISHER_ONBOARDING.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ABTestingLab.jsx  EmailPlatformIntegration.jsx  RevenueImpactAnalysis.jsx  SalesforceIntegration.jsx
