[project]
name = "PersonalizeAI"
version = "1.0.0"
description = "AI-powered newsletter personalization platform for financial publishers"
authors = [
    {name = "PersonalizeAI Team"}
]
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.1.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend.src"]

